--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint:fix": "eslint --fix ./src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
