--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@reduxjs/toolkit": "^2.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
